--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,12 @@
-$grey-light: rgba(217, 217, 217, 1);
-$primary-gold: #ffc200;
-$dark-gold: rgba(255, 194, 0, 0.3);
+// page background
+$dark-blue: #14141f;
+
+// sections title gradient
 $gold-gradient: conic-gradient(from 179.93deg at 52.11% 63.4%, #ffd95f 0deg, #fff 360deg);
-$red-dark: rgba(245, 66, 29, 0.5);
-$blue-dark: #14141f;
+
+
+$primary-gold: #ffc200;
+$grey-light: rgba(217, 217, 217, 1);
+$dark-gold: rgba(255, 194, 0, 0.3);
+$dark-red: rgba(245, 66, 29, 0.5);
+
