change border color

--- a/src/styles/sections/header.scss
+++ b/src/styles/sections/header.scss
@@ -234,7 +234,7 @@
         height: 100vh;
         padding-top: 80px;
         transition: width 0.2s ease-in-out;
-        border-left: 2px solid $blue-dark;
+        border-left: 2px solid $dark-blue;
         background-color: $primary-gold;
 
         inset: 0 0 auto auto;
