--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,11 +2,15 @@
 @import "./variables";
 @import "./components/button.scss";
 @import "./components/paragraph.scss";
+@import "./components/section-container.scss";
 @import "./components/section-heading.scss";
 @import "./sections/header.scss";
 @import "./sections/discover.scss";
 @import "./sections/how-to-work.scss";
 @import "./sections/our-collection.scss";
+@import "./sections/contact-us.scss";
+@import "./sections/roadmap.scss";
+@import "./sections/footer.scss";
 
 *,
 *::before,
