--- a/src/styles/sections/our-collection.scss
+++ b/src/styles/sections/our-collection.scss
@@ -1,16 +1,14 @@
 .our-collection-section {
-    padding: 174px 0;
+    padding: 9% 0 5% 0;
 
     &__title {
         margin-bottom: 4.3%;
-
         text-align: center;
         letter-spacing: 5.7px;
     }
     &__description {
         max-width: 940px;
         margin-bottom: 34px;
-
         text-align: center;
         margin-inline: auto;
     }
